--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ i1 i2 i3 i4
 </div>
 <div style="float:right; padding-left:2%">
 <h1>Ice Cream Store</h1>
-Street 1 Boston MA.
-Icecream@gmail.com
+Street 1 Boston MA.<br>
+Icecream@gmail.com<br>
 Open Daily 12PM
 </div>
 </footer>
