--- a/flavors.html
+++ b/flavors.html
@@ -10,7 +10,7 @@
 <a href="ordering.html">Online Ordering</a>|<a href="reviews.html">Reviews</a>
 </div>
 <div id="right">
-logo1,logo2
+<img src="inst.png" height="30px"><img src="face.png" height="30px">
 </div>
 </nav>
 <!--this is the first section-->
@@ -24,6 +24,7 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 <div>
 <img src="Berry.jpg" style="float:left;width:30%">
 </div>
+</section>
 <!--second section, three column table-->
 <section>
 <h1>Look at Our Manu</h1>
@@ -64,8 +65,8 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 <footer>
 <hr>
 <div style="float:left;width:33% ">
-<h1>Logo</h1>
-i1 i2 i3 i4
+<h1 id="feetlogo">IceCream</h1>
+<img src="inst.png" height="30px"><img src="face.png" height="30px">
 </div>
 <div style="float:left;width:25%">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d363.35974034205765!2d-71.08850746547581!3d42.3391366004768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70f2fc9725e9227a!2sNortheastern%20University%20College%20of%20Professional%20Studies!5e0!3m2!1sen!2sus!4v1591654167337!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
