--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <a href="ordering.html">Online Ordering</a>|<a href="reviews.html">Reviews</a>
 </div>
 <div id="right">
-logo1,logo2
+<img src="inst.png" height="30px"><img src="face.png" height="30px">
 </div>
 </nav>
 <div id="splashpic"><!--this is the big logo and the picture-->
-<h1>logo</h1>
+<h1>IceCream</h1>
 </div>
 <!--this is the ABOUT section-->
 <section>
@@ -33,8 +33,8 @@ labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam 
 <footer>
 <hr>
 <div style="float:left;width:33% ">
-<h1>Logo</h1>
-i1 i2 i3 i4
+<h1 id="feetlogo">IceCream</h1>
+<img src="inst.png" height="30px"><img src="face.png" height="30px">
 </div>
 <div style="float:left;width:25%">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d363.35974034205765!2d-71.08850746547581!3d42.3391366004768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70f2fc9725e9227a!2sNortheastern%20University%20College%20of%20Professional%20Studies!5e0!3m2!1sen!2sus!4v1591654167337!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
