--- a/reviews.html
+++ b/reviews.html
@@ -17,7 +17,8 @@
 <img src="ribbon.jpg" style="float:left;height:50px">
 <h1>People's Favorate Store Since 1999</h1>
 </section>
-<section style="height:500px;width:90%;border-style:solid;border-width:1px">
+<section>
+<iframe src="https://eloquent-shaw-2b0343.netlify.app/" width="100%" height="700px"></iframe>
 </section>
 <footer>
 <hr>
