--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </nav>
 <div id="splashpic"><!--this is the big logo and the picture-->
 <h1>IceCream</h1>
+<h2 style="font-size:20px">Sweets and dessert for you!</h2>
 </div>
 <!--this is the ABOUT section-->
 <section>
