--- a/flavors.html
+++ b/flavors.html
@@ -16,8 +16,8 @@
 </nav>
 <!--this is the first section-->
 <section>
-<div style="float:left;width:70%">
-<h1>Exciting flavors for this summer</h1>
+<div>
+<h1 id="board">Exciting flavors for this summer</h1>
 <p id="words" >Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
 diam nonumy eirmod tempor invidunt ut labore et dolore
 </p>
@@ -27,11 +27,17 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 </div>
 </section>
 <!--second section, three column table-->
-<section>
-<h1>Look at Our Manu</h1>
-<img height="300px" id="manu_img" style="float:left">
-<div id="manu_des" style="padding:2%">hellp</div>
-<table width="100%" style="font-size:24px">
+<section style="clear:both">
+<h1 id="board">Look at Our Menu</h1>
+<div  style="float:left;width:700px;">
+
+<img height="350px" id="manu_img" src="img_manu.jpg" style="display:block;margin-left:auto;margin-right:auto;">
+
+</div>
+<div id="manu_des" style="margin-bottom:2%;margin-left:2%;padding:2%;font-size:24px;float:left;padding-right:20%;background-color:white;width:300px;height:300px;background-image:url('texture_cream.png');outline-style:double;outline-color:pink;outline-width:15px;";>
+<h3>Summer Manu</h3>
+</div>
+<table width="100%" style="font-size:32px">
 <tr>
 	<th>Cakes</th>
 	<th>Ice Cream</th>
@@ -40,27 +46,27 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 <!--function constructor:
 Item:Name，Price,Calores,picture('yourimage.jpg'),description,-->
 <tr>
-	<td onclick="showItem('Carrot Cake',4,200,'cake_carrot.jpg','this is a good carrot cake')">$4 Carrot Cake</td>
+	<td onclick="showItem('Carrot Cake',4,200,'cake_carrot.jpg','this is a good carrot cake')">Carrot Cake</td>
 	<td onclick="showItem('Icecream Bowl',6,'400-600','ice_bowl.jpg','enjoy our classic bowl in the summer days')">Bowl</td>
 	<td onclick="showItem('Chocolate Cookie',2,'300','cookie_choco.jpg','the classic chocolate cookie is going to make your day')">chocolate cookie</td>
 </tr>
 <tr>
-	<td>$3 Red Velvet Cake</td>
-	<td>Cone</td>
-	<td>sugar topping</td>
+	<td onclick="showItem('Red Velvet Cake',4,300,'cake_valvet.jpg','This is our valvet cake, lots of coloring makes it a delicious treat')">Red Velvet Cake</td>
+	<td onclick="showItem('IceCream Cone',5,'200','ice_cone.jpg','This is our handcrafted ice Cream in chocolate waffle cone')">Cone</td>
+	<td onclick="showItem('Sugar Topping Cookie',2,'300','cookie_sugar.jpg','Sugar topping cookie with our best wishes')">sugar topping</td>
 </tr>
 <tr>
-	<td>$8 Black Forest Gateau</td>
+	<td>Black Forest Gateau</td>
 	<td>Mountain</td>
 	<td>extra large cookie</td>
 </tr>
 <tr>
-	<td>$4 Coffee Cake</td>
+	<td>Coffee Cake</td>
 	<td>Cup</td>
 	<td>strawberry Cream</td>
 </tr>
 <tr>
-	<td>$10 IceCream Cake</td>
+	<td>IceCream Cake</td>
 	<td>8.88 Machine Gun</td>
 	<td>Black Power</td>
 </tr>
@@ -74,10 +80,10 @@ Item:Name，Price,Calores,picture('yourimage.jpg'),description,-->
 <img src="inst.png" height="30px"><img src="face.png" height="30px">
 </div>
 <div style="float:left;width:25%">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d363.35974034205765!2d-71.08850746547581!3d42.3391366004768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70f2fc9725e9227a!2sNortheastern%20University%20College%20of%20Professional%20Studies!5e0!3m2!1sen!2sus!4v1591654167337!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d363.35974034205765!2d-71.08850746547581!3d42.3391366004768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70f2fc9725e9227a!2sNortheastern%20University%20College%20of%20Professional%20Studies!5e0!3m2!1sen!2sus!4v1591654167337!5m2!1sen!2sus" frameborder="0" style="border:0;height:200px" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 <div style="float:right; padding-left:2%">
-<h1>Ice Cream Store</h1>
+<h1 id="board" style="width:100%">Ice Cream Store</h1>
 Street 1 Boston MA.<br>
 Icecream@gmail.com<br>
 Open Daily 12PM
