--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
 <!--this is the ABOUT section-->
 <section>
 <div>
-<h1>About</h1>
+<h1 id="board">About</h1>
 </div>
-<div id="words">
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+
+
+
+<div id="words" style="float:left;margin-bottom:5%;">
+<img src="img_machine.jpg" style="float:right;outline-style:double;outline-width:5px;margin-right:5%;margin-left:5%;height:240px;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
 labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
 et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
 labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+
 </div>
 </section>
 
@@ -41,7 +45,7 @@ labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam 
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d363.35974034205765!2d-71.08850746547581!3d42.3391366004768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70f2fc9725e9227a!2sNortheastern%20University%20College%20of%20Professional%20Studies!5e0!3m2!1sen!2sus!4v1591654167337!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 <div style="float:right; padding-left:2%">
-<h1>Ice Cream Store</h1>
+<h1 id="board" style="width:100%">Ice Cream Store</h1>
 Street 1 Boston MA.<br>
 Icecream@gmail.com<br>
 Open Daily 12PM
