--- a/reviews.html
+++ b/reviews.html
@@ -15,7 +15,7 @@
 </nav>
 <section>
 <img src="ribbon.jpg" style="float:left;height:50px">
-<h1>People's Favorate Store Since 1999</h1>
+<h1 id="board">People's Favorate Store Since 1999</h1>
 </section>
 <section>
 <iframe src="https://eloquent-shaw-2b0343.netlify.app/" width="100%" height="700px"></iframe>
@@ -30,7 +30,7 @@
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d363.35974034205765!2d-71.08850746547581!3d42.3391366004768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70f2fc9725e9227a!2sNortheastern%20University%20College%20of%20Professional%20Studies!5e0!3m2!1sen!2sus!4v1591654167337!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 <div style="float:right; padding-left:2%">
-<h1>Ice Cream Store</h1>
+<h1 id="board" style="width:100%">Ice Cream Store</h1>
 Street 1 Boston MA.<br>
 Icecream@gmail.com<br>
 Open Daily 12PM
