--- a/flavors.html
+++ b/flavors.html
@@ -2,7 +2,8 @@
 <html>
 <head><link rel="stylesheet" href="mystyle.css"></head>
 <script src="ManuControl.js"></script>
-<body>
+<script src="screenFit.js"></script>
+<body onload="lookHere()">
 <header>
 </header>
 <nav>
@@ -90,4 +91,5 @@ Open Daily 12PM
 </div>
 </footer>
 <body>
+
 </html>
