--- a/flavors.html
+++ b/flavors.html
@@ -18,7 +18,7 @@
 <!--this is the first section-->
 <section>
 <div>
-<h1 id="board">Exciting flavors for this summer</h1>
+<h1 class="board">Exciting flavors for this summer</h1>
 <p id="words" >Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
 diam nonumy eirmod tempor invidunt ut labore et dolore
 </p>
@@ -29,7 +29,7 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 </section>
 <!--second section, three column table-->
 <section style="clear:both">
-<h1 id="board">Look at Our Menu</h1>
+<h1 class="board">Look at Our Menu</h1>
 <div  style="float:left;width:700px;">
 
 <img height="350px" id="manu_img" src="img_manu.jpg" style="display:block;margin-left:auto;margin-right:auto;">
@@ -84,7 +84,7 @@ Item:Name，Price,Calores,picture('yourimage.jpg'),description,-->
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d363.35974034205765!2d-71.08850746547581!3d42.3391366004768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70f2fc9725e9227a!2sNortheastern%20University%20College%20of%20Professional%20Studies!5e0!3m2!1sen!2sus!4v1591654167337!5m2!1sen!2sus" frameborder="0" style="border:0;height:200px" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 <div style="float:right; padding-left:2%">
-<h1 id="board" style="width:100%">Ice Cream Store</h1>
+<h1 class="board" style="width:100%">Ice Cream Store</h1>
 Street 1 Boston MA.<br>
 Icecream@gmail.com<br>
 Open Daily 12PM
