--- a/ordering.html
+++ b/ordering.html
@@ -15,7 +15,7 @@
 </nav>
 <!--here starts the main page-->
 <section>
-<h1 id="board">Skip the line and make your order ready!!</h1>
+<h1 class="board">Skip the line and make your order ready!!</h1>
 <p id="words">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
 tempor invidunt ut labore et dolore
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
@@ -23,7 +23,7 @@ tempor invidunt ut labore et dolore</p>
 </section>
 <!--umm new section with two pics-->
 <section id="putin">
-<h2 id="board">Ask us about the catering</h2>
+<h2 class="board">Ask us about the catering</h2>
 <img src="shoptemp.jpg" style="float:right;height:300px">
 <p id="words">
 <input type="text" placeholder="Full Name" style="width:30%"><br>
@@ -43,7 +43,7 @@ tempor invidunt ut labore et dolore</p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d363.35974034205765!2d-71.08850746547581!3d42.3391366004768!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x70f2fc9725e9227a!2sNortheastern%20University%20College%20of%20Professional%20Studies!5e0!3m2!1sen!2sus!4v1591654167337!5m2!1sen!2sus" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>
 <div style="float:right; padding-left:2%">
-<h1 id="board" style="width:100%">Ice Cream Store</h1>
+<h1 class="board" style="width:100%">Ice Cream Store</h1>
 Street 1 Boston MA.<br>
 Icecream@gmail.com<br>
 Open Daily 12PM
