--- a/flavors.html
+++ b/flavors.html
@@ -35,7 +35,17 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 <img height="350px" id="manu_img" src="img_manu.jpg" style="display:block;margin-left:auto;margin-right:auto;">
 
 </div>
-<div id="manu_des" style="margin-bottom:2%;margin-left:2%;padding:2%;font-size:24px;float:left;background-color:white;width:570px;height:300px;background-image:url('texture_cream.png');outline-style:double;outline-color:pink;outline-width:15px;";>
+<div id="manu_des" style="
+	margin-bottom:2%;
+	padding:2%;
+	font-size:24px;
+	float:left;
+	width:570px;
+	height:300px;
+	background-image:url('texture_cream.png');
+	outline-style:double;
+	outline-color:pink;
+	outline-width:15px;">
 <h3>Summer Manu</h3>
 </div>
 <table width="100%" style="font-size:32px">
