--- a/reviews.html
+++ b/reviews.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="stylesheet" href="mystyle.css"></head>
-<body>
+<head><link rel="stylesheet" href="mystyle.css">
+<script src="screenFit.js"></script></head>
+<body onload="lookHere()">
 <header>
 </header>
 <nav>
