--- a/flavors.html
+++ b/flavors.html
@@ -48,6 +48,11 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 	outline-width:15px;">
 <h3>Summer Manu</h3>
 </div>
+<div style="text-align:center;clear:both;">
+Select Quantity
+<input type="number" id="order_number">
+<input type="submit" value="Add to Cart" onclick="addToCart()">
+</div>
 <table width="100%" style="font-size:32px">
 <tr>
 	<th>Cakes</th>
