--- a/ordering.html
+++ b/ordering.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><link rel="stylesheet" href="mystyle.css">
-<script src="screenFit.js"></script></head>
+<script src="screenFit.js"></script>
+<script src="orderControl.js"></script></head>
 <body onload="lookHere()">
 <header>
 </header>
@@ -21,6 +22,7 @@
 tempor invidunt ut labore et dolore
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
 tempor invidunt ut labore et dolore</p>
+<p id="orders"></p>
 </section>
 <!--umm new section with two pics-->
 <section id="putin">
