--- a/ordering.html
+++ b/ordering.html
@@ -3,7 +3,7 @@
 <head><link rel="stylesheet" href="mystyle.css">
 <script src="screenFit.js"></script>
 <script src="orderControl.js"></script></head>
-<body onload="lookHere()">
+<body onload="lookHere();parseCookie()">
 <header>
 </header>
 <nav>
