--- a/flavors.html
+++ b/flavors.html
@@ -48,7 +48,7 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 	outline-width:15px;">
 <h3>Summer Manu</h3>
 </div>
-<div style="text-align:center;clear:both;">
+<div style="text-align:center;clear:both;margin-bottom:2%;" class="putin" >
 Select Quantity
 <input type="number" id="order_number">
 <input type="submit" value="Add to Cart" onclick="addToCart()">
