--- a/ordering.html
+++ b/ordering.html
@@ -16,25 +16,30 @@
 </div>
 </nav>
 <!--here starts the main page-->
-<section>
+<section class="putin">
 <h1 class="board">Skip the line and make your order ready!!</h1>
 <p id="words">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
 tempor invidunt ut labore et dolore
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
 tempor invidunt ut labore et dolore</p>
-<p id="orders"></p>
+<p style="font-size:18px">Here is your order list</p>
+<p id="orders" style="font-size:24px;text-shadow:0px 0px 2px white;"></p>
+<input type="submit" value="Send Us the Note" >
 </section>
 <!--umm new section with two pics-->
-<section id="putin">
+<section class="putin">
+
 <h2 class="board">Ask us about the catering</h2>
-<img src="shoptemp.jpg" style="float:right;height:300px">
-<p id="words">
-<input type="text" placeholder="Full Name" style="width:30%"><br>
-<input type="Email" placeholder="Email" style="width:30%"><br>
-<input type="text" placeholder="Message" style="width:30%;height:200px">
+<div style="background-image:url(shoptemp.png);">
 
-
+<p id="words" style="width:30%;margin-left:auto;margin-right:auto;padding-top:10%;padding-bottom:15%;">
+<input type="text" placeholder="Full Name" style="width:100%"><br>
+<input type="tel" placeholder="Phone Number"style="width:100%"><br>
+<input type="Email" placeholder="Email" style="width:100%"><br>
+<input type="text" placeholder="Message"style="width:100%"><br>
+<input type="submit" value="Place the Order, We will call you back">
 </p>
+</div>
 </section>
 <footer>
 <hr>
