--- a/ordering.html
+++ b/ordering.html
@@ -24,6 +24,10 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
 tempor invidunt ut labore et dolore</p>
 <p style="font-size:18px">Here is your order list</p>
 <p id="orders" style="font-size:24px;text-shadow:0px 0px 2px white;"></p>
+<input type="words" placeholder="Your Name"><br>
+<input type="words" placeholder="When you want it"><br>
+<input type="number" placeholder="Your Phone Number"><br>
+we will call you to confirm<br>
 <input type="submit" value="Send Us the Note" >
 </section>
 <!--umm new section with two pics-->
