--- a/flavors.html
+++ b/flavors.html
@@ -48,10 +48,10 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 	outline-width:15px;">
 <h3>Summer Manu</h3>
 </div>
-<div style="text-align:center;clear:both;margin-bottom:2%;" class="putin" >
+<div style="font-size:20px;text-align:center;clear:both;margin-bottom:2%;" class="putin" >
 Select Quantity
-<input type="number" id="order_number">
-<input type="submit" value="Add to Cart" onclick="addToCart()">
+<input type="number" id="order_number" style="width:5%;padding:10px 10px">
+<input type="submit" value="Add to Cart" onclick="addToCart()" style="width:10%;padding:10px 10px">
 </div>
 <table width="100%" style="font-size:32px">
 <tr>
