--- a/ordering.html
+++ b/ordering.html
@@ -3,7 +3,7 @@
 <head><link rel="stylesheet" href="mystyle.css">
 <script src="screenFit.js"></script>
 <script src="orderControl.js"></script></head>
-<body onload="lookHere();parseCookie()">
+<body onload="lookHere();parseCookie();">
 <header>
 </header>
 <nav>
@@ -24,11 +24,13 @@ Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
 tempor invidunt ut labore et dolore</p>
 <p style="font-size:18px">Here is your order list</p>
 <p id="orders" style="font-size:24px;text-shadow:0px 0px 2px white;"></p>
-<input type="words" placeholder="Your Name"><br>
-<input type="words" placeholder="When you want it"><br>
-<input type="number" placeholder="Your Phone Number"><br>
-we will call you to confirm<br>
-<input type="submit" value="Send Us the Note" >
+<div style="display:block;">
+<input type="words" placeholder="Your Name" style="width:40%;padding:10px 10px"><br><br>
+<input type="words" placeholder="When you want it" style="width:40%;padding:10px 10px"><br><br>
+<input type="tel" placeholder="Your Phone Number" style="width:40%;padding:10px 10px"><br><br>
+we will call you to confirm<br><br>
+<input type="submit" value="Send Us the Note" style="padding:10px 10px">
+</div>
 </section>
 <!--umm new section with two pics-->
 <section class="putin">
@@ -36,13 +38,13 @@ we will call you to confirm<br>
 <h2 class="board">Ask us about the catering</h2>
 <div style="background-image:url(shoptemp.png);">
 
-<p id="words" style="width:30%;margin-left:auto;margin-right:auto;padding-top:10%;padding-bottom:15%;">
-<input type="text" placeholder="Full Name" style="width:100%"><br>
-<input type="tel" placeholder="Phone Number"style="width:100%"><br>
-<input type="Email" placeholder="Email" style="width:100%"><br>
-<input type="text" placeholder="Message"style="width:100%"><br>
-<input type="submit" value="Place the Order, We will call you back">
-</p>
+<div id="words" style="padding-top:10%;padding-bottom:10%;">
+<input type="text" placeholder="Full Name" style="width:40%;padding:10px 10px"><br><br>
+<input type="tel" placeholder="Phone Number"style="width:40%;padding:10px 10px"><br><br>
+<input type="Email" placeholder="Email" style="width:40%;padding:10px 10px"><br><br>
+<input type="text" placeholder="Message"style="width:40%;padding:10px 10px"><br><br>
+<input type="submit" value="Place the Order, We will call you back" style="width:40%;padding:10px 10px">
+</div>
 </div>
 </section>
 <footer>
@@ -61,5 +63,5 @@ Icecream@gmail.com<br>
 Open Daily 12PM
 </div>
 </footer>
-<body>
+</body>
 </html>
