--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 </nav>
 <div id="splashpic"><!--this is the big logo and the picture-->
-<h1>IceCream</h1>
+<h1>IceCream</h1><a href="flavors.html"><img src="menu.png" style="height:100px" ></a>
 <h2 style="font-size:20px">Sweets and dessert for you!</h2>
 </div>
 <!--this is the ABOUT section-->
