--- a/flavors.html
+++ b/flavors.html
@@ -9,7 +9,7 @@
 <nav>
 <div id="left">
 <a href="index.html">Home</a>|<a href="flavors.html">Flavors</a>|
-<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">Reviews</a>
+<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">MiniGame</a>
 </div>
 <div id="right">
 <img src="inst.png" height="30px"><img src="face.png" height="30px">
@@ -19,12 +19,18 @@
 <section>
 <div>
 <h1 class="board">Exciting flavors for this summer</h1>
-<p id="words" >Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-diam nonumy eirmod tempor invidunt ut labore et dolore
+<img src="Berry.jpg" style="float:right;width:25%;box-shadow: 0 0 4px 4px grey;">
+<div style="width:70%">
+<p id="words" style="display:block;padding:5%;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+diam nonumy eirmod tempor invidunt ut labore et dolore <br>
+Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+diam nonumy eirmod tempor invidunt ut labore et dolore<br>
+Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+diam nonumy eirmod tempor invidunt ut labore et dolore<br>
 </p>
 </div>
 <div>
-<img src="Berry.jpg" style="float:left;width:30%">
+
 </div>
 </section>
 <!--second section, three column table-->
@@ -32,7 +38,7 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 <h1 class="board">Look at Our Menu</h1>
 <div  style="float:left;width:700px;margin-bottom:2%;" id="manu_img_frame">
 
-<img height="350px" id="manu_img" src="img_manu.jpg" style="display:block;margin-left:auto;margin-right:auto;">
+<img height="350px" id="manu_img" src="img_manu.jpg" style="display:block;margin-left:auto;margin-right:auto;box-shadow: 0 0 4px 4px grey;">
 
 </div>
 <div id="manu_des" style="
@@ -43,9 +49,7 @@ diam nonumy eirmod tempor invidunt ut labore et dolore
 	width:570px;
 	height:300px;
 	background-image:url('texture_cream.png');
-	outline-style:double;
-	outline-color:pink;
-	outline-width:15px;">
+	box-shadow: 0 0 4px 4px grey;">
 <h3>Summer Manu</h3>
 </div>
 <div style="font-size:20px;text-align:center;clear:both;margin-bottom:2%;" class="putin" >
