--- a/reviews.html
+++ b/reviews.html
@@ -8,7 +8,7 @@
 <nav>
 <div id="left">
 <a href="index.html">Home</a>|<a href="flavors.html">Flavors</a>|
-<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">Reviews</a>
+<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">MiniGame</a>
 </div>
 <div id="right">
 <img src="inst.png" height="30px"><img src="face.png" height="30px">
@@ -19,7 +19,7 @@
 <h1 class="board">People's Favorate Store Since 1999</h1>
 </section>
 <section>
-<iframe src="https://eloquent-shaw-2b0343.netlify.app/" width="100%" height="700px"></iframe>
+<iframe src="https://eloquent-shaw-2b0343.netlify.app/" width="100%" height="700px" style="border:0;"></iframe>
 </section>
 <footer>
 <hr>
