--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav>
 <div id="left">
 <a href="index.html">Home</a>|<a href="flavors.html">Flavors</a>|
-<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">Reviews</a>
+<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">MiniGame</a>
 </div>
 <div id="right">
 <img src="inst.png" height="30px"><img src="face.png" height="30px">
@@ -28,7 +28,7 @@
 
 
 <div id="words" style="float:left;margin-bottom:5%;">
-<img src="img_machine.jpg" style="float:right;outline-style:double;outline-width:5px;margin-right:5%;margin-left:5%;height:240px;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
+<img src="img_machine.jpg" style="float:right;box-shadow: 0 0 4px 4px grey;margin-right:5%;margin-left:5%;height:240px;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
 labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
 et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
