--- a/ordering.html
+++ b/ordering.html
@@ -9,7 +9,7 @@
 <nav>
 <div id="left">
 <a href="index.html">Home</a>|<a href="flavors.html">Flavors</a>|
-<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">Reviews</a>
+<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">MiniGame</a>
 </div>
 <div id="right">
 <img src="inst.png" height="30px"><img src="face.png" height="30px">
@@ -36,7 +36,7 @@ we will call you to confirm<br><br>
 <section class="putin">
 
 <h2 class="board">Ask us about the catering</h2>
-<div style="background-image:url(shoptemp.png);">
+<div style="background-image:url(shoptemp.png);background-size:cover;background-repeat:no-repeat;box-shadow: 0 0 4px 4px grey;">
 
 <div id="words" style="padding-top:10%;padding-bottom:10%;">
 <input type="text" placeholder="Full Name" style="width:40%;padding:10px 10px"><br><br>
