--- a/reviews.html
+++ b/reviews.html
@@ -8,7 +8,7 @@
 <nav>
 <div id="left">
 <a href="index.html">Home</a>|<a href="flavors.html">Flavors</a>|
-<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">MiniGame</a>
+<a href="ordering.html">Online Ordering</a>|<a href="reviews.html">Game</a>
 </div>
 <div id="right">
 <img src="inst.png" height="30px"><img src="face.png" height="30px">
