--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+<!-- project description
+IceCream Shop
+Project Manager:Nithya Ishwarya
+Designer:Naga Sriya Dogiparthi
+Compiler:Xixun Bu
+ITC6355 Web App Design and Development (spring 2020)
+Professor: Amin Karimpour
+-->
 <head><link rel="stylesheet" href="mystyle.css">
 <script src="screenFit.js"></script>
 </head>
@@ -11,8 +19,8 @@
 <a href="index.html">Home</a>|<a href="flavors.html">Flavors</a>|
 <a href="ordering.html">Online Ordering</a>|<a href="reviews.html">Game</a>
 </div>
-<div id="right">
-<img src="inst.png" height="30px"><img src="face.png" height="30px">
+<div id="right" style="padding-top:1%">
+<img src="inst.png" height="40px"><img src="face.png" height="40px">
 </div>
 </nav>
 <div id="splashpic"><!--this is the big logo and the picture-->
