--- a/flavors.html
+++ b/flavors.html
@@ -29,12 +29,7 @@ Professor: Amin Karimpour
 <h1 class="board">Exciting flavors for this summer</h1>
 <img src="Berry.jpg" style="float:right;width:25%;box-shadow: 0 0 4px 4px grey;">
 <div style="width:70%">
-<p id="words" style="display:block;padding:5%;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-diam nonumy eirmod tempor invidunt ut labore et dolore <br>
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-diam nonumy eirmod tempor invidunt ut labore et dolore<br>
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-diam nonumy eirmod tempor invidunt ut labore et dolore<br>
+<p id="words" style="display:block;padding:5%;">We have a selection of the most delicious and seasonal flavors. We have collected feedback from our customers to create the most requested flavors of the year. Select from a choice of rich, sweet, creamy, and exciting flavors!
 </p>
 </div>
 <div>
@@ -58,7 +53,7 @@ diam nonumy eirmod tempor invidunt ut labore et dolore<br>
 	height:300px;
 	background-image:url('texture_cream.png');
 	box-shadow: 0 0 4px 4px grey;">
-<h3>Summer Manu</h3>
+<h3>Summer Menu</h3>
 </div>
 <div style="font-size:20px;text-align:center;clear:both;margin-bottom:2%;" class="putin" >
 Select Quantity
@@ -86,12 +81,12 @@ Item:Name，Price,Calores,picture('yourimage.jpg'),description,-->
 <tr>
 	<td>Black Forest Gateau</td>
 	<td>Mountain</td>
-	<td>extra large cookie</td>
+	<td>Extra large cookie</td>
 </tr>
 <tr>
 	<td>Coffee Cake</td>
 	<td>Cup</td>
-	<td>strawberry Cream</td>
+	<td>Strawberry Cream</td>
 </tr>
 <tr>
 	<td>IceCream Cake</td>
