--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@ Professor: Amin Karimpour
 
 
 <div id="words" style="float:left;margin-bottom:5%;">
-<img src="img_machine.jpg" style="float:right;box-shadow: 0 0 4px 4px grey;margin-right:5%;margin-left:5%;height:240px;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
-et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+<img src="img_machine.jpg" style="float:right;box-shadow: 0 0 4px 4px grey;margin-right:5%;margin-left:5%;height:240px;">We are a vintage ice cream brand that started serving up ice creams in 1969. We have the best flavors – maple walnut, frozen pudding, raspberry chocolate chip, peppermint stick, and more. We use fresh and seasonal ingredients which makes our seasonal variety more delectable. You can also choose from a variety of cakes and toppings to customize and make it your perfect scoop!<br>
+
+Curbside pickup and online ordering are now available to our high-risk customers. Thank you for your patience as we navigate this public health crisis with the goal of providing both essential service and maximum safety to our customers and crew.
 
 </div>
 </section>
